// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`single studio fetches with slug provided 1`] = `
{
  "avatarSrc": "https://imagecdn.clips4sale.com/accounts99/254031/assets/avatar/avatar_md_20685.jpg",
  "bannerSrc": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_md_28779.jpg",
  "bannerSrcset": [
    {
      "media": 1536,
      "srcSet": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_xlg_28779.jpg",
    },
    {
      "media": 1280,
      "srcSet": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_lg_28779.jpg",
    },
    {
      "media": 1024,
      "srcSet": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_md_28779.jpg",
    },
    {
      "media": 320,
      "srcSet": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_sm_28779.jpg",
    },
  ],
  "browseSimilarClipsLink": "/clips/search/category/4/clipsPage/1",
  "canBeFollowed": true,
  "canonical": {
    "href": "http://www.clips4sale.com/en/studio/254031/tatti-roana-bondage",
  },
  "categories": [
    {
      "id": 1039,
      "link": "/studio/254031/tatti-roana-bondage/Cat1039-ballgagged/Page1/recommended/Limit10",
      "name": "BALLGAGGED",
    },
    {
      "id": 14,
      "link": "/studio/254031/tatti-roana-bondage/Cat14-blow-jobs/Page1/recommended/Limit10",
      "name": "BLOW JOBS",
    },
    {
      "id": 4,
      "link": "/studio/254031/tatti-roana-bondage/Cat4-bondage/Page1/recommended/Limit10",
      "name": "BONDAGE",
    },
    {
      "id": 1017,
      "link": "/studio/254031/tatti-roana-bondage/Cat1017-bondage-blowjobs/Page1/recommended/Limit10",
      "name": "BONDAGE BLOWJOBS",
    },
    {
      "id": 350,
      "link": "/studio/254031/tatti-roana-bondage/Cat350-brat-girls/Page1/recommended/Limit10",
      "name": "BRAT GIRLS",
    },
    {
      "id": 1627,
      "link": "/studio/254031/tatti-roana-bondage/Cat1627-classic-bondage/Page1/recommended/Limit10",
      "name": "CLASSIC BONDAGE",
    },
    {
      "id": 183,
      "link": "/studio/254031/tatti-roana-bondage/Cat183-cuckolding/Page1/recommended/Limit10",
      "name": "CUCKOLDING",
    },
    {
      "id": 1,
      "link": "/studio/254031/tatti-roana-bondage/Cat1-foot-fetish/Page1/recommended/Limit10",
      "name": "FOOT FETISH",
    },
    {
      "id": 1719,
      "link": "/studio/254031/tatti-roana-bondage/Cat1719-gamer-girls/Page1/recommended/Limit10",
      "name": "GAMER GIRLS",
    },
    {
      "id": 981,
      "link": "/studio/254031/tatti-roana-bondage/Cat981-office-domination/Page1/recommended/Limit10",
      "name": "OFFICE DOMINATION",
    },
    {
      "id": 486,
      "link": "/studio/254031/tatti-roana-bondage/Cat486-struggling/Page1/recommended/Limit10",
      "name": "STRUGGLING",
    },
    {
      "id": 1322,
      "link": "/studio/254031/tatti-roana-bondage/Cat1322-submissive-slave-training/Page1/recommended/Limit10",
      "name": "SUBMISSIVE / SLAVE TRAINING",
    },
    {
      "id": 88,
      "link": "/studio/254031/tatti-roana-bondage/Cat88-superheroines/Page1/recommended/Limit10",
      "name": "SUPERHEROINES",
    },
    {
      "id": 488,
      "link": "/studio/254031/tatti-roana-bondage/Cat488-tape-bondage/Page1/recommended/Limit10",
      "name": "TAPE BONDAGE",
    },
  ],
  "categoryId": "",
  "classicWidgetExperimentActive": false,
  "clipsOutsideOrientationCount": 0,
  "clipsSort": "recommended",
  "description": "My names Tatti, welcome to my C4S page!! I&#039;m so excited to be sharing my videos with you and I hope you like bondage as much as I do;)  I&#039;m 5&#039;2, big titties and I love bondage!!! Now that i&#039;ve introduced myself let me tell you a little bit about the content you&#039;ll find on my page! There&#039;s nothing i&#039;ve said no to yet so I&#039;d say you won&#039;t find many that seriously love bondage like me! I have been a bondage lover for the last 5ish years filming with various studios over the years but only recently have decided to give it a go on my own sites, so i&#039;m really grateful for all your support! You&#039;ll find a range of different materials I like to explore, tape, rope, cuffs, cling film, silk and many more (&amp; more to come). I like to try new things but also love a classic hogtie and ballgag too hehe.. I&#039;m also available for custom content which you can request by checking my twitter! Thank you for taking time to get to know me, hopefully soon I will be one of your favourite damsels...",
  "donate": false,
  "ga_tracking_id": null,
  "isChatEnabled": true,
  "isContentPreferenceLGBT": false,
  "isCreatorOnline": false,
  "meta": {
    "author": "clips4sale.com",
    "copyright": "https://www.clips4sale.com 2025",
    "description": "Bondage of various styles, both classic and unique. Filmed in 4K",
    "engine": "Clips4Sale",
    "image": "/Assets/Static/img/c4sFixedLogo.png",
    "image_alt": "Clips4Sale.com",
    "keywords": null,
    "language": "en",
    "location": "studio-page",
    "og_description": "Bondage of various styles, both classic and unique. Filmed in 4K",
    "og_url": "/studio/254031/tatti-roana-bondage",
    "revision": null,
    "robots": null,
    "title": "Tatti Roana Bondage",
    "twitter_card": "summary_large_image",
    "twitter_site": "@clips4sale",
  },
  "page": 1,
  "selectedOrientations": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "similarStoreClips": [],
  "socialLinks": [
    {
      "title": "email_for_fans",
      "url": "tattiroana@hotmail.com",
    },
    {
      "title": "twitter_url",
      "url": "https://x.com/tattiroana1",
    },
  ],
  "sortOptions": [
    {
      "label": "Recommended",
      "value": "recommended",
    },
    {
      "label": "Most Recent",
      "value": "added_at",
    },
    {
      "label": "Most Popular",
      "value": "most_popular",
    },
    {
      "label": "Top Selling",
      "value": "top_selling",
    },
    {
      "label": "Longest Clips",
      "value": "longest",
    },
  ],
  "storeDefaultSorting": "recommended",
  "store_has_clips": true,
  "store_status": "open",
  "studioId": "254031",
  "studioSlug": "tatti-roana-bondage",
  "title": "Tatti Roana Bondage",
  "tribute": true,
  "view": "list",
  "visibility_mode": "online",
}
`;

exports[`single studio fetches without slug provided - handles remix redirect 1`] = `
{
  "avatarSrc": "https://imagecdn.clips4sale.com/accounts99/254031/assets/avatar/avatar_md_20685.jpg",
  "bannerSrc": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_md_28779.jpg",
  "bannerSrcset": [
    {
      "media": 1536,
      "srcSet": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_xlg_28779.jpg",
    },
    {
      "media": 1280,
      "srcSet": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_lg_28779.jpg",
    },
    {
      "media": 1024,
      "srcSet": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_md_28779.jpg",
    },
    {
      "media": 320,
      "srcSet": "https://imagecdn.clips4sale.com/accounts99/254031/assets/banner/banner_sm_28779.jpg",
    },
  ],
  "browseSimilarClipsLink": "/clips/search/category/4/clipsPage/1",
  "canBeFollowed": true,
  "canonical": {
    "href": "http://www.clips4sale.com/studio/254031/tatti-roana-bondage",
  },
  "categories": [
    {
      "id": 1039,
      "link": "/studio/254031/tatti-roana-bondage/Cat1039-ballgagged/Page1/recommended/Limit10",
      "name": "BALLGAGGED",
    },
    {
      "id": 14,
      "link": "/studio/254031/tatti-roana-bondage/Cat14-blow-jobs/Page1/recommended/Limit10",
      "name": "BLOW JOBS",
    },
    {
      "id": 4,
      "link": "/studio/254031/tatti-roana-bondage/Cat4-bondage/Page1/recommended/Limit10",
      "name": "BONDAGE",
    },
    {
      "id": 1017,
      "link": "/studio/254031/tatti-roana-bondage/Cat1017-bondage-blowjobs/Page1/recommended/Limit10",
      "name": "BONDAGE BLOWJOBS",
    },
    {
      "id": 350,
      "link": "/studio/254031/tatti-roana-bondage/Cat350-brat-girls/Page1/recommended/Limit10",
      "name": "BRAT GIRLS",
    },
    {
      "id": 1627,
      "link": "/studio/254031/tatti-roana-bondage/Cat1627-classic-bondage/Page1/recommended/Limit10",
      "name": "CLASSIC BONDAGE",
    },
    {
      "id": 183,
      "link": "/studio/254031/tatti-roana-bondage/Cat183-cuckolding/Page1/recommended/Limit10",
      "name": "CUCKOLDING",
    },
    {
      "id": 1,
      "link": "/studio/254031/tatti-roana-bondage/Cat1-foot-fetish/Page1/recommended/Limit10",
      "name": "FOOT FETISH",
    },
    {
      "id": 1719,
      "link": "/studio/254031/tatti-roana-bondage/Cat1719-gamer-girls/Page1/recommended/Limit10",
      "name": "GAMER GIRLS",
    },
    {
      "id": 981,
      "link": "/studio/254031/tatti-roana-bondage/Cat981-office-domination/Page1/recommended/Limit10",
      "name": "OFFICE DOMINATION",
    },
    {
      "id": 486,
      "link": "/studio/254031/tatti-roana-bondage/Cat486-struggling/Page1/recommended/Limit10",
      "name": "STRUGGLING",
    },
    {
      "id": 1322,
      "link": "/studio/254031/tatti-roana-bondage/Cat1322-submissive-slave-training/Page1/recommended/Limit10",
      "name": "SUBMISSIVE / SLAVE TRAINING",
    },
    {
      "id": 88,
      "link": "/studio/254031/tatti-roana-bondage/Cat88-superheroines/Page1/recommended/Limit10",
      "name": "SUPERHEROINES",
    },
    {
      "id": 488,
      "link": "/studio/254031/tatti-roana-bondage/Cat488-tape-bondage/Page1/recommended/Limit10",
      "name": "TAPE BONDAGE",
    },
  ],
  "categoryId": "",
  "classicWidgetExperimentActive": false,
  "clipsOutsideOrientationCount": 0,
  "clipsSort": "recommended",
  "description": "My names Tatti, welcome to my C4S page!! I&#039;m so excited to be sharing my videos with you and I hope you like bondage as much as I do;)  I&#039;m 5&#039;2, big titties and I love bondage!!! Now that i&#039;ve introduced myself let me tell you a little bit about the content you&#039;ll find on my page! There&#039;s nothing i&#039;ve said no to yet so I&#039;d say you won&#039;t find many that seriously love bondage like me! I have been a bondage lover for the last 5ish years filming with various studios over the years but only recently have decided to give it a go on my own sites, so i&#039;m really grateful for all your support! You&#039;ll find a range of different materials I like to explore, tape, rope, cuffs, cling film, silk and many more (&amp; more to come). I like to try new things but also love a classic hogtie and ballgag too hehe.. I&#039;m also available for custom content which you can request by checking my twitter! Thank you for taking time to get to know me, hopefully soon I will be one of your favourite damsels...",
  "donate": false,
  "ga_tracking_id": null,
  "isChatEnabled": true,
  "isContentPreferenceLGBT": false,
  "isCreatorOnline": false,
  "meta": {
    "author": "clips4sale.com",
    "copyright": "https://www.clips4sale.com 2025",
    "description": "Bondage of various styles, both classic and unique. Filmed in 4K",
    "engine": "Clips4Sale",
    "image": "/Assets/Static/img/c4sFixedLogo.png",
    "image_alt": "Clips4Sale.com",
    "keywords": null,
    "language": "en",
    "location": "studio-page",
    "og_description": "Bondage of various styles, both classic and unique. Filmed in 4K",
    "og_url": "/studio/254031/tatti-roana-bondage",
    "revision": null,
    "robots": null,
    "title": "Tatti Roana Bondage",
    "twitter_card": "summary_large_image",
    "twitter_site": "@clips4sale",
  },
  "page": 1,
  "selectedOrientations": [
    0,
    1,
    2,
    3,
    4,
    5,
  ],
  "similarStoreClips": [],
  "socialLinks": [
    {
      "title": "email_for_fans",
      "url": "tattiroana@hotmail.com",
    },
    {
      "title": "twitter_url",
      "url": "https://x.com/tattiroana1",
    },
  ],
  "sortOptions": [
    {
      "label": "Recommended",
      "value": "recommended",
    },
    {
      "label": "Most Recent",
      "value": "added_at",
    },
    {
      "label": "Most Popular",
      "value": "most_popular",
    },
    {
      "label": "Top Selling",
      "value": "top_selling",
    },
    {
      "label": "Longest Clips",
      "value": "longest",
    },
  ],
  "storeDefaultSorting": "recommended",
  "store_has_clips": true,
  "store_status": "open",
  "studioId": "254031",
  "studioSlug": "tatti-roana-bondage",
  "title": "Tatti Roana Bondage",
  "tribute": true,
  "view": "list",
  "visibility_mode": "online",
}
`;
